--- a/web/src/app/components/admin-dashboard/components/editpatient/editpatient.component.scss
+++ b/web/src/app/components/admin-dashboard/components/editpatient/editpatient.component.scss
@@ -1783,11 +1783,7 @@ table {
 
 .diagosis_panel {
   width: 100%;
-  max-height: 290px;
-  overflow-y: auto;
-  padding-right: 10px;
 }
-
 
 .vital_data_right_sub {
   display: flex;
@@ -2405,44 +2401,15 @@ button {
   width: 100%;
 
 }
-.noteTextArea {
-  background-color: #edeff5;
-  height: 100%;
-  border-radius: 8px;
-  width: 100%;
-  padding: 8px;
-  line-height: 24px;
-  font-family: "Rubik";
-  font-size: 0.8rem;
-  border: none;
+.disabled-div {
+  pointer-events: none;
+  opacity: 0.6;
 }
- 
-.noteTextArea1 {
-  background-color: #edeff5;
-  height: 270px;
-  border-radius: 8px;
-  width: 100%;
-  padding: 8px;
-  border: none;
-}
-
-.custom-modal {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0,0,0,0.6);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 1000;
-}
-
-.modal-content {
-  background-color: #164d61;
-  padding: 20px;
-  border-radius: 10px;
-  position: relative;
-  max-width: 480px;
+.err {
+  min-height: 10px; /* Reserve space */
+  color: red;
+  font-size: 0.7rem;
+  transition: opacity 0.3s ease;
+  margin-left: 10px;
+  margin-top: -5px;
 }
