--- a/web/src/app/components/admin-dashboard/components/myprofile/myprofile.component.scss
+++ b/web/src/app/components/admin-dashboard/components/myprofile/myprofile.component.scss
@@ -27,9 +27,7 @@
 .main_sub_panel{
   width: 100%;
   display: flex;
-
-
-
+//  justify-content: space-between;
 }
 
 
@@ -39,12 +37,12 @@
 //   margin-bottom: 42px;
 // }
 .userInfo {
-  width: 70%;
+  width: 60%;
   margin-right: 2rem;
 }
 
 .userRole{
-  width: 100%;
+  width: 30%;
 }
 .panel_title {
   display: flex;
@@ -205,7 +203,6 @@ input.ng-invalid.ng-touched {
 }
 .registerprofile{
   width: 100%;
-
 }
 .upper_panel {
   height: 2.4rem;
@@ -340,17 +337,17 @@ outline: none !important;
   justify-content: space-between;
 }
 
-.btn_cancel {
-  width: 120px;
-  height: 40px;
-  background-color: #edeff5;
-  border-radius: 20px;
-  border: 1px solid #3BCBC4;
-  color: #164d61;
-  font: normal normal normal 16px/30px Rubik;
-  //border: none !important;
-  outline: none;
-}
+// .btn_cancel {
+//   width: 120px;
+//   height: 40px;
+//   background-color: #edeff5;
+//   border-radius: 20px;
+//   border: 1px solid #3BCBC4;
+//   color: #164d61;
+//   font: normal normal normal 16px/30px Rubik;
+//   //border: none !important;
+//   outline: none;
+// }
 
 
 
@@ -398,6 +395,10 @@ mat-progress-spinner {
   backdrop-filter: blur(2px);
 }
 @media only screen and (max-width: 1280px) {
+  .btn-change-password
+  {
+    display: block;
+  }
   .main-panel {
     padding-top: 60px 16px 16px 16px;
   }
@@ -411,21 +412,454 @@ mat-progress-spinner {
   .content-panel {
     margin-right: 30px !important;
   }
-  .userInfo {
-    width: 80% !important;
-  }
+  // .userInfo {
+  //   width: 80% !important;
+  // }
 }
- .userRole {
-    position: column !important;
-    width: 80%;
+//  .userRole {
+//     position: column !important;
+//     width: 80%;
 
-  }
+//   }
 
-@media only screen and (max-width: 1145px) {
+@media only screen and (max-width: 900px) {
 
   .main_sub_panel{
-    display: block;
+    width:100%;
+    flex-direction: column;
   }
+  .userInfo
+  {
+    width:100%;
+  }
+  .userRole{
+  width: 100%;
+}
 }
 
 
+/* Black Overlay */
+p {
+  margin: 0px !important;
+}
+
+.profile-button-panel {
+  bottom:10px;
+  left: 40px;
+  position: absolute;
+  background-color: red($color: #000000);
+}
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.6);
+  z-index: 99;
+}
+
+/* Profile Button */
+.logout_button {
+  cursor: pointer;
+  padding: 20px;
+  color: white;
+  border-radius: 5px;
+  display: inline-block;
+}
+
+.dropdown-overlay {
+  position: fixed;
+  bottom: 20px;
+  left: 40px;
+  background: white;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
+  width: 320px;
+  z-index: 1050;
+}
+/* Logout Panel */
+.logout_panel_button {
+  width: 100%;
+  height: 6rem;
+  padding: 0.8rem;
+  background-color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  z-index: 2000;
+  border-radius: 16px 0 16px 16px;
+}
+
+.logout_user_data {
+  width: 100%;
+  padding-left: 1rem;
+}
+
+.logOff {
+  width: 1rem;
+  height: 1rem;
+  filter: brightness(0) saturate(100%) invert(15%) sepia(57%) saturate(6868%)
+    hue-rotate(270deg) brightness(69%) contrast(109%);
+}
+
+.logoff_container {
+  display: flex;
+  border-radius: 8px;
+  background: linear-gradient(to right, #8226df 50%, #ffffff 50%);
+  background-size: 200% 100%;
+  background-position: right bottom;
+  transition: all 0.5s ease-out;
+  //   position: relative;
+  align-items: center;
+  height: 32px;
+}
+
+.logoff_container:hover {
+  background-position: left bottom;
+}
+.logoff_container:hover p {
+  background-color: #8226df;
+  border-radius: 8px;
+  color: #ffffff;
+}
+
+.logoff_container:hover img {
+  filter: brightness(0) saturate(100%) invert(100%) sepia(0%) saturate(7474%)
+    hue-rotate(300deg) brightness(111%) contrast(95%);
+}
+.profilename-panel {
+  width: 130px;
+  height: 70px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.profilename {
+  font-size: 1.2rem;
+  font-family: "Rubik";
+  color: #164d61;
+  border-radius: 50%;
+  padding: 0.6rem;
+  border: 0.1rem #164d61 solid;
+  height: 2.5rem;
+  width: 2.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.example-list {
+  width: 208px;
+  height: 10rem;
+  background-color: #edeff5;
+  position: absolute;
+  left: 112px;
+  bottom: 0px;
+  border-radius: 16px;
+  z-index: -1;
+  list-style: none;
+  padding: 0px;
+}
+
+.example-list li {
+  list-style: none;
+  padding: 8px 0;
+  color: #164d61;
+  font-size: 0.8rem;
+  font-family: "Rubik";
+  padding-left: 0.8rem;
+}
+.logout-user-name {
+  color: #000000;
+  font-size: 0.8rem;
+  font-family: "Rubik";
+}
+.logout-user-name-data {
+  color: #000000;
+  font-size: 0.8rem;
+  font-family: "Rubik";
+  // padding-top: 18px;
+  // padding-bottom: 12px;
+}
+.profile-button-panel-tab {
+  display: none;
+}
+.profile-button-panel {
+  display: block;
+}
+
+@media only screen and (max-width: 1280px) {
+  .profile-button-panel-tab {
+    display: block;
+  }
+  .profile-button-panel {
+    display: none;
+  }
+
+
+  .logout_panel_button-tab {
+    width: 100%;
+    padding: 0.8rem;
+    background-color: #590ca7;
+    display: flex;
+    align-items: center;
+    border-radius: 16px 0 16px 16px;
+  }
+  .logout-user-name-data {
+    color: #c9b7e9;
+  }
+  .profilename {
+    color: #c9b7e9;
+    border: 0.1rem #c9b7e9 solid;
+    width: 60px;
+    height: 60px;
+    font-size: 18px;
+  }
+  .logoff-container-tab {
+    display: flex;
+    align-items: center;
+    padding: 8px;
+    background-color: transparent;
+    border-radius: 8px;
+  }
+
+  .logout-user-name {
+    opacity: 0;
+    margin-left: 8px;
+    transition: opacity 0.3s ease;
+    color: #c9b7e9;
+    transform: translateX(-20px);
+    transition: opacity 0.3s ease, transform 0.3s ease;
+  }
+
+  .logoff-container-tab:hover {
+    background: linear-gradient(to left, #8226df 50%, #590ca7 50%);
+    background-size: 200% 100%;
+    background-position: right bottom;
+    transition: all 0.5s ease-out; /* Change this to your desired background color */
+  }
+
+  .logoff-container-tab:hover .logout-user-name {
+    opacity: 1;
+  }
+
+  .logoff-container-tab img {
+    width: 1rem !important;
+    height: 1rem !important;
+    color: #c9b7e9;
+    filter: invert(100%) sepia(7%) saturate(0%) hue-rotate(48deg)
+      brightness(106%) contrast(106%) !important;
+  }
+}
+
+// /change password page css//
+.overlay-password {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5); /* semi-transparent backdrop */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 99;
+}
+.change-password-container {
+  width: 584px;
+  height: 650px;
+  background-color: #164d61;
+  border-radius: 16px;
+  padding-top: 48px;
+  padding-left: 80px;
+  padding-right: 80px;
+  padding-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+}
+.change-password-title {
+  text-align: center;
+  color: #8be3d9;
+  font-size: 1.2rem;
+  line-height: 30px;
+  font-family: "Rubik";
+  padding-bottom: 24px;
+}
+.change-password-first-para {
+  color: #ffffff;
+  font-size: 1rem;
+  line-height: 1.2rem;
+  font-family: "Rubik";
+  padding-bottom: 16px;
+}
+
+.change-password-container p {
+  color: #cff4f5;
+  font-size: 0.8rem;
+  line-height: 1rem;
+  font-family: "Rubik";
+  padding-bottom: 20px;
+}
+
+.change-password-container label {
+  color: #cff4f5;
+  font-size: 0.8rem;
+  line-height: 1rem;
+  font-family: "Rubik";
+  text-align: left;
+  width: 200px;
+  padding-bottom: 5px;
+}
+
+.password_subPanel {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 12px;
+}
+.password_panel input {
+  border-style: none;
+  height: 40px;
+  margin-top: -16px;
+  outline: none;
+  border-radius: 8px;
+  background-color: #edeff5;
+  color: black;
+  font-family: "Rubik";
+  font-size: 16px;
+  line-height: 20px;
+}
+
+.button_panel {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 24px;
+  align-items: flex-end;
+}
+.cancel_button {
+  width: 120px;
+  height: 40px;
+  background: #edeff5;
+  border-radius: 20px;
+  border: 1px solid #3bcbc4;
+  color: #164d61;
+  font-family: "Rubik";
+  font-size: 16px;
+  line-height: 30px;
+  text-align: center;
+  z-index: 100;
+}
+
+.cancel_button:hover {
+  background-color: #3bcbc4;
+  border: 1px solid #3bcbc4;
+  color: #ffffff;
+}
+
+.confirm_button {
+  background: #99e8e3;
+  border: 1px solid #3bcbc4;
+  border-radius: 20px;
+  width: 272px;
+  height: 40px;
+  color: #cff4f5;
+  font-family: "Rubik";
+  font-size: 16px;
+  line-height: 30px;
+  text-align: center;
+}
+.icon-check {
+  width: 20px;
+  height: 20px;
+  position: absolute;
+  left: 0px;
+}
+.icon-view {
+  width: 24px;
+  height: 24px;
+
+  background: #edeff5;
+  position: absolute;
+  right: 0px;
+}
+.input-panel {
+  position: relative;
+}
+input {
+  padding: 10px 25px;
+}
+
+.err {
+  min-height: 20px; /* Reserve space */
+  color: red;
+  font-size: 0.8rem;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+.err.visible {
+  opacity: 1;
+}
+.logo_placeholder {
+  text-align: center;
+  height: 4rem;
+  margin-bottom: 1.7rem;
+  padding-top: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-left: 1.5rem;
+  padding-right: 0.8rem;
+}
+.logoImg {
+  width: 5rem;
+  height: 3rem;
+}
+.error-container {
+  height: 20px;
+}
+.password_img {
+  width: 16px;
+  height: 16px;
+
+  background: #edeff5;
+  position: absolute;
+  right: 0px;
+}
+.password-match {
+  filter: invert(100%) sepia(41%) saturate(3647%) hue-rotate(160deg)
+    brightness(91%) contrast(96%);
+}
+
+@media only screen and (max-width: 1300px) {
+  .logout_button {
+    cursor: pointer;
+    padding-top: 10px;
+
+  }
+}
+.btn-change-password
+{
+   display: none;
+  background-color: #EDEFF5;
+  border-radius: 20px;
+  max-width: 150px;
+  font-size: 0.8rem;
+  color: #164d61;
+  font-family: "Rubik";
+  float: right;
+}
+.panel-change-pass-btn
+{
+  width:90%;
+}
+
+
+@media (max-width: 1280px) {
+  .btn-change-password {
+    display: inline-block; /* show below 900px */
+  }
+}
