--- a/web/src/app/components/admin-dashboard/components/patient-page/patient-page.component.html
+++ b/web/src/app/components/admin-dashboard/components/patient-page/patient-page.component.html
@@ -140,9 +140,9 @@
             <option [ngValue]="undefined" selected>All Vitals</option>
             <option
               *ngFor="let data of patientVitalsArray; let i = index"
-              [value]="data"
+              [value]="data.Vital"
             >
-              {{ data }}
+              {{ data.Vital }}
             </option>
           </select>
         </div>
@@ -324,6 +324,7 @@
                   (keyup)="applyDataFilter($event)"
                   (focus)="setupFilter('PatientName')"
                   [value]="patientSearch"
+                  autocomplete="off"
                 />
               </div>
               <div class="search_heading_default" *ngIf="!searchPatientList_Name">
@@ -361,6 +362,7 @@
                   (keyup)="applyDataFilter($event)"
                   (focus)="setupFilter('ProgramName')"
                   [value]="programSearch"
+                  autocomplete="off"
                 />
               </div>
                <div class="search_heading_default" *ngIf="!searchProgram_Name">
@@ -395,7 +397,7 @@
             </mat-header-cell>
             <mat-cell *matCellDef="let element">
               <span>{{
-                getEntrollDate(element.EnrolledDate)
+                getEntrollDate(element.EnrolledDateTime)
               }}</span>
             </mat-cell>
           </ng-container>
@@ -418,6 +420,7 @@
                   (keyup)="applyDataFilter($event)"
                   (focus)="setupFilter('PhysicianName')"
                   [value]="phySearchValue"
+                  autocomplete="off"
                 />
               </div>
               <div
@@ -463,6 +466,7 @@
                     id="p_ClinicSearchInput"
                     (focus)="setupFilter('ClinicName')"
                     [value]="clinicNameSerach"
+                    autocomplete="off"
                   />
                 </div>
                 <div
@@ -516,6 +520,7 @@
                   id="p_AssignedSearchInput"
                   (focus)="setupFilter('AssignedMember')"
                   [value]="assigneeSerach"
+                  autocomplete="off"
                 />
               </div>
               <div
@@ -941,11 +946,13 @@
                 class="search_icon"
                 src="../../../../../assets/04-Icons/Icons_Cancel.svg"
                 (click)="searchAssigneeClose()"
-              /><input
+              />
+              <input
                 class="search_input input_panel"
                 [(ngModel)]="billingAssigneeName"
-                (keyup.enter)="billingDataFilter()"
+                (ngModelChange)="billingDataFilter()"
               />
+
             </div>
             <div
               class="search_heading_default"
