bugfix on multivital branch 27/09/2025

--- a/web/src/app/components/admin-dashboard/components/addpatient/addpatient.component.html
+++ b/web/src/app/components/admin-dashboard/components/addpatient/addpatient.component.html
@@ -1235,7 +1235,7 @@
 
               <div class="Program-details_container_sub">
                 <div
-                  class="userInfoItem Program-details_container_sub_left"
+                  class="userInfoItem Program-details_container_sub_left vital_sub_Box "
                   style="width: 47.5%; margin-right: 2rem"
                 >
                   <!-- <div *ngFor="let v of vital_selected">
