--- a/web/src/app/components/admin-dashboard/shared/right-sidebar/right-sidebar.component.html
+++ b/web/src/app/components/admin-dashboard/shared/right-sidebar/right-sidebar.component.html
@@ -2211,10 +2211,10 @@
               placeholder="Describe Your Task"
             >
             </textarea>
-            <!-- <div class="warn">
-              <ng-container  *ngIf="registerTask.get('description')?.invalid && registerSchedule.get('description')?.touched">Description is Required
+            <div class="warn">
+              <ng-container  *ngIf="registerTask.get('description')?.invalid && registerTask.get('description')?.touched">Description is Required
               </ng-container>
-            </div> -->
+            </div>
           </div>
           <!-- Tak Content date Start -->
           <div class="common_content task_content_date">
